Changed name of location hours on action bar and changed icon

--- a/UWFoodServices/res/values/strings.xml
+++ b/UWFoodServices/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_restaurant_menu_list" translatable="false">RestaurantMenuList</string>
     <string name="menuText" translatable="false">Menu</string>
     <string name="locationText" translatable="false">Location &amp; Hours</string>
-    <string name="title_activity_location_hours">LocationHours</string>
+    <string name="title_activity_location_hours">Locations</string>
     <string name="action_settings">Settings</string>
     <string name="action_settings">Example Settings</string>
     <string name="title_map">Map View</string>
