1. Implemented database with a table for the locations. Will update the schema to match for menu items soon. The columns are ID (Primary Key), Restaurant, Location, Timings.      2. Implemented the splash screen which loads the database with these values initially. The values are only initialised in the splash screen, and accessed everywhere else. The databasehandler class and restaurantlocationholder class are static instances, they occur throughout the application.    3. Location lists should work fine now. Maps, menu nothing configured for now.

--- a/UWFoodServices/res/values/strings.xml
+++ b/UWFoodServices/res/values/strings.xml
@@ -63,17 +63,14 @@
     <string name="title_child_preference">Title Child Preference</string>
     <string name="summary_child_preference">Summary Child Preference</string>
     <string name="title_activity_settings">Settings Activity</string>
-    
     <string name="network_preferences">Network</string>
-    
     <string name="title_connection_type_preference">Connection Type</string>
     <string name="summary_connection_type_preference">Network connection used to download data.</string>
     <string name="dialog_title_connection_type_preference">Connection Type</string>
-    
     <string name="title_store_data_preference">Store Data</string>
     <string name="summary_store_data_preference">Stores data for use offline.</string>
-    
     <string name="title_fetch_weekly_preference">Fetch Automatically</string>
     <string name="summary_fetch_weekly_preference">Weekly fetches new data.</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 
 </resources>
