Added a progress bar in the splash screen. The data fetches pretty fast, so won't be able to catch the progress bar. Updated the text on the error page

--- a/UWFoodServices/res/values/strings.xml
+++ b/UWFoodServices/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="title_activity_menu_lists">MenuLists</string>
     <string name="ShowAll">Show All</string>
     <string name="Clear">Clear Map</string>
-    <string name="error">Seems like you are not connected to the network. When you are connected, hit the button below.</string>
-    <string name="ready">Ready!</string>
+    <string name="error">Network connection required. When you are connected, hit the button below.</string>
+    <string name="ready">Refresh!</string>
 
     <!-- Menu List strings. -->
     <string name="menu_settings">Settings</string>
