--- a/UWFoodServices/res/values/strings.xml
+++ b/UWFoodServices/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="summary_parent_preference">Summary Parent Preference</string>
     <string name="title_child_preference">Title Child Preference</string>
     <string name="summary_child_preference">Summary Child Preference</string>
-    <string name="title_activity_settings">Settings Activity</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="network_preferences">Network</string>
     <string name="title_connection_type_preference">Connection Type</string>
     <string name="summary_connection_type_preference">Network connection used to download data.</string>
