--- a/UWFoodServices/res/values/strings.xml
+++ b/UWFoodServices/res/values/strings.xml
@@ -92,5 +92,6 @@
     <string name="licenses">LICENSES</string>
     <string name="click_here_to_view_legal_notice">Click here to view Legal Notice</string>
     <string name="contains_information_provided_by_the_university_of_waterloo_under_license_on_an_as_is_basis_">Contains information provided by the University of Waterloo under license on an \'as is\' basis.</string>
+    <string name="title_activity_product_info">ProductInfo</string>
 
 </resources>
